syntax = "proto3";

option csharp_namespace = "TaskService.Contracts";

package task;

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";
import "task-types.proto";

service TaskService {
  rpc GetManyByBoardId(GetManyTasksByBoardIdRequest) returns (GetManyTasksByBoardIdResponse);
  rpc GetById(GetTaskByIdRequest) returns (task.types.TaskDto);
  rpc Create(CreateTaskRequest) returns (task.types.TaskDto);
  rpc Update(UpdateTaskRequest) returns (task.types.TaskDto);
  rpc Delete(DeleteTaskRequest) returns (google.protobuf.Empty);
}

message GetManyTasksByBoardIdRequest {
  string tenant_id = 1;
  string project_id = 2;
  string board_id = 3;
}


message GetManyTasksByBoardIdResponse {
  repeated task.types.TaskDto tasks = 1;
}

message GetTaskByIdRequest {
  string tenant_id = 1;
  string project_id = 2;
  string board_id = 3;
  string task_id = 4;
}

message CreateTaskRequest {
  string tenant_id = 1;
  string project_id = 2;
  string board_id = 3;
  string board_column_id = 4;
  string title = 5;
  string description = 6;
  repeated string tag_ids = 7;
  optional string assignee_user_id = 8;
}

message UpdateTaskRequest {
  string tenant_id = 1;
  string project_id = 2;
  string board_id = 3;
  string task_id = 4;
  string title = 5;
  string description = 6;
  string board_column_id = 7;
  optional string assignee_user_id = 8;
  repeated string tag_ids = 9;
}

message DeleteTaskRequest {
  string tenant_id = 1;
  string project_id = 2;
  string board_id = 3;
  string task_id = 4;
}
